--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ava-extensions",
-  "author": "",
+  "author": "Jayden Rasmussen",
   "version": "0.0.1",
   "license": "ISC",
   "scripts": {
@@ -14,6 +14,7 @@
     "husky": "^0.14.3"
   },
   "devDependencies": {
-    "ava": "^0.25.0"
+    "ava": "^0.25.0",
+    "eslint": "^4.19.1"
   }
 }
