--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "lint": "eslint . --fix",
     "test": "ava"
   },
-  "dependencies": {
-    "husky": "^0.14.3"
-  },
   "devDependencies": {
     "ava": "^0.25.0",
-    "eslint": "^4.19.1"
+    "eslint": "^4.19.1",
+    "husky": "^0.14.3"
   }
 }
